<resources>
    <string name="app_name">Office Hours</string>

    <!-- OnBoardingActivity -->
    <string name="on_boarding_avatar_cd">The user\'s profile image</string>
    <string name="on_boarding_label">Tell us about yourself</string>
    <string name="on_boarding_type_q">Are you a student or a teacher?</string>
    <string name="on_boarding_office_hours_q">What are your office hours?</string>
    <string name="on_boarding_office_hours_add">Add hours</string>
    <string name="on_boarding_personal_info_q">Personal information</string>
    <string name="on_boarding_student">Student</string>
    <string name="on_boarding_teacher">Teacher</string>
    <string name="on_boarding_first_name">First name</string>
    <string name="on_boarding_last_name">Last name</string>
    <string name="on_boarding_email">E-mail address</string>
    <string name="on_boarding_school_email">School e-mail address</string>
    <string name="on_boarding_school_email_disable">I prefer to use my regular email address</string>
    <string name="on_boarding_phone">Phone number (optional)</string>
    <string name="on_boarding_finish">Done</string>

    <string name="on_boarding_error_name">What\'s your name?</string>
    <string name="on_boarding_error_email">What\'s your email address?</string>
    <string name="on_boarding_error_email_invalid">Please, introduce a valid email address</string>
    <string name="on_boarding_error_network">Unable to save your profile at the moment</string>

    <!-- ScheduleActivity -->
    <string name="schedule_menu_add">Add</string>
    <string name="schedule_menu_add_condensed">Add</string>
    <string name="schedule_menu_faculty">See my instructors</string>
    <string name="schedule_menu_faculty_condensed">Instructors</string>
    <string name="schedule_menu_logout">Sign out</string>
    <string name="schedule_my_instructors_label">My instructors</string>
    <string name="schedule_dialog_add_title">Add a course</string>
    <string-array name="schedule_dialog_add_options">
        <item>Enroll in a course</item>
        <item>Create a course</item>
    </string-array>

    <!-- CourseEditorActivity -->
    <string name="course_editor_label_new">New course</string>
    <string name="course_editor_label_edit">Edit course</string>
    <string name="course_editor_header">Enter the relevant course information</string>
    <string name="course_editor_code_hint">Code (ie. ENGL 1010)</string>
    <string name="course_editor_name_hint">Name (ie. English Composition)</string>
    <string name="course_editor_location_hint">Location (ie. Patterson 123)</string>
    <string name="course_editor_meeting_time_hint">Meeting time</string>
    <string name="course_editor_last_meeting_date_hint">Last meeting date</string>
    <string name="course_editor_error_code">Introduce a code</string>
    <string name="course_editor_error_name">Introduce a name</string>
    <string name="course_editor_error_location">Introduce a location</string>
    <string name="course_editor_error_meeting_time">Introduce a meeting time</string>
    <string name="course_editor_error_last_meeting_date">Introduce a last meeting date</string>
    <string name="course_editor_create">Create</string>
    <string name="course_editor_save">Save</string>

    <!-- TimeSlotPickerActivity -->
    <string name="time_slot_picker_label">Pick a time</string>
    <string name="time_slot_picker_monday">M</string>
    <string name="time_slot_picker_tuesday">T</string>
    <string name="time_slot_picker_wednesday">W</string>
    <string name="time_slot_picker_thursday">R</string>
    <string name="time_slot_picker_friday">F</string>
    <string name="time_slot_picker_saturday">S</string>
    <string name="time_slot_picker_from">from</string>
    <string name="time_slot_picker_dash">-</string>
    <string name="time_slot_picker_to">to</string>
    <string name="time_slot_picker_done">done</string>

    <!-- AddCodeActivity -->
    <string name="add_code_title">Add Code</string>
    <string name="add_code_hint">XXXX</string>
    <string name="add_code_add">Add course</string>
    <string name="add_code_length_error">Codes are 4 characters long</string>
    <string name="add_code_invalid_error">Invalid code</string>

    <!-- AddCourseActivity -->
    <string name="add_course_label">Add to my schedule</string>
    <string name="add_course_verify">Please, verify this is your course</string>
    <string name="add_course_course">Course</string>
    <string name="add_course_location">Location</string>
    <string name="add_course_meeting_time">Meeting time</string>
    <string name="add_course_last_meeting">Last meeting date</string>
    <string name="add_course_instructor">Instructor</string>
    <string name="add_course_add">Add</string>

    <!-- CourseActivity -->
    <string name="course_info_header">Course information</string>
    <string name="course_location">Location</string>
    <string name="course_meeting_time">Meeting time</string>
    <string name="course_last_meeting">Last meeting date</string>
    <string name="course_instructor">Instructor</string>
    <string name="course_instructor_chat_cd">Chat with your instructor</string>
    <string name="course_office_hours">Office hours</string>
    <string name="course_access_code">Access code</string>
    <string name="course_enrollment">Enrollment</string>
    <string name="course_enrollment_content">%1$d students</string>
    <string name="course_enrollment_list_cd">List of people enrolled in the class</string>
    <string name="course_enrollment_broadcast_cd">List of people enrolled in the class</string>

    <!-- MessageHolder -->
    <string name="message_state_cd">Whether the message has been delivered or read</string>

    <!-- ChatActivity -->
    <string name="chat_error_offline">Need an internet connection to use the chat</string>
    <string name="chat_error_disconnected">Please, reconnect to the network to continue chatting</string>

    <!-- Avatar -->
    <string name="avatar_image_cd">The user\'s avatar</string>

    <!-- OfficeHours -->
    <string name="office_hours_monday">Monday: </string>
    <string name="office_hours_tuesday">Tuesday: </string>
    <string name="office_hours_wednesday">Wednesday: </string>
    <string name="office_hours_thursday">Thursday: </string>
    <string name="office_hours_friday">Friday: </string>
    <string name="office_hours_saturday">Saturday: </string>
    <string name="office_hours_sunday">Sunday: </string>

</resources>
