<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include
            layout="@layout/toolbar"
            android:id="@+id/on_boarding_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/on_boarding_type_q" />

                <RadioGroup
                    android:id="@+id/on_boarding_type_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" >

                    <RadioButton
                        android:id="@+id/on_boarding_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_boarding_student" />

                    <RadioButton
                        android:id="@+id/on_boarding_teacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_boarding_teacher" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/on_boarding_info_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="@string/on_boarding_first_name" />

                    <EditText
                        android:id="@+id/on_boarding_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="@string/on_boarding_last_name" />

                    <EditText
                        android:id="@+id/on_boarding_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="@string/on_boarding_email" />

                    <EditText
                        android:id="@+id/on_boarding_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="@string/on_boarding_phone" />

                    <EditText
                        android:id="@+id/on_boarding_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/on_boarding_finish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/on_boarding_finish"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
