<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="course"
            type="org.tndata.officehours.model.Course" />
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include
            android:id="@+id/add_course_toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/add_course_verify" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    android:text="@string/add_course_course" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:text="@{course.getDisplayName()}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    android:text="@string/add_course_meeting_time" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:text="@{course.getMeetingTime()}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    android:text="@string/course_instructor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:text="@{course.getInstructorName()}" />

                <Button
                    android:id="@+id/add_course_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="end"
                    android:text="@string/add_course_add" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
