<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true" >

        <include
            android:id="@+id/course_editor_toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:textSize="18sp"
                    android:text="@string/course_editor_header" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/course_editor_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/course_editor_code_hint"
                        android:inputType="text"
                        android:textAllCaps="true" >

                    </android.support.design.widget.TextInputEditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/course_editor_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/course_editor_name_hint"
                        android:inputType="textCapWords" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/course_editor_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/course_editor_location_hint"
                        android:inputType="textCapWords" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/course_editor_meeting_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/course_editor_meeting_time_hint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/course_editor_last_meeting_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/course_editor_last_meeting_date_hint" />

                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="end|center_vertical" >

                    <TextView
                        android:id="@+id/course_editor_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/error"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/course_editor_progress"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/course_editor_done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/course_editor_create" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
